<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/tdc_logo"
        android:contentDescription="@string/tdc_img_content_desc_default" />
    
    <TextView 
        style="@style/general_textfield_label"
        android:layout_gravity="center"
        android:text="@string/tdc_dialog_addnote_title" />
    
    <EditText
        android:id="@+id/tdc_dialog_add_note_body"
        style="@style/general_edittext_style"
        android:layout_height="100dp"
        android:textStyle="normal"
        android:inputType="text"
        android:lines="5" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >
        <Button  
            android:id="@+id/tdc_dialog_addnote_save"
            android:text="@string/tdc_dialog_addnote_save"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            style="@style/actions_home" />
        
        <Button  
            android:id="@+id/tdc_dialog_addnote_discard"
            android:text="@string/tdc_dialog_addnote_discard"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/actions_home" />
    </LinearLayout>
</LinearLayout>